--- a/src/GuessedCategory.css
+++ b/src/GuessedCategory.css
@@ -8,6 +8,7 @@
     animation: fadeIn 1.5s forwards;
     margin-left: auto;
     margin-right: auto;
+    text-transform: uppercase;
 }
 
 .guessed-words {
